added personal bio and photo

--- a/about_tangerine.html
+++ b/about_tangerine.html
@@ -29,6 +29,9 @@
                 <img id="about_pics" src="" alt="Jose Andrade">
                 <h3 align="center">Jose Andrade</h3>
                 <p align="center"><u>Major</u>: Software Engineering<br/><u>Year</u>: 3rd<br/><u>Team Role</u>: Developer<br/><u>Hobbies</u>: I enjoy programming, playing games, and running when not in school. I hope you enjoy the website as much as the team has enjoyed building the website.</p>
+                <img id="about_pics" src="adam.jpg" alt="Adam Sloma">
+                <h3 align="center">Adam Sloma</h3>
+                <p align="center"><u>Major</u>: Music and Informatics<br/><u>Year</u>: 3rd<br/><u>Team Role</u>: Developer<br/><u>Hobbies</u>: I enjoy watching the English Premier League, rock climbing, riding/maintaining my bike, and cooking Italian food. My favorite movie is Silence, and my favorite composer is obviously Beethoven.  </p>
             </div>
             <div id = "footer">
                 Copyright &copy; 2019 Tangerine Fit.
