Added in picture
Updated html and added in a picture

--- a/about_tangerine.html
+++ b/about_tangerine.html
@@ -26,7 +26,7 @@
                 <img id="about_pics" src="maricel.jpg" alt="Maricel Mendiola">
                 <h3 align="center">Maricel Mendiola</h3>
                 <p align="center"><u>Major</u>: Information and Computer Science, Informatics<br/><u>Year</u>: 3rd<br/><u>Team Role</u>: Developer<br/><u>Hobbies</u>: I enjoy going on road trips, watching The Good Doctor and The Flash, having karaoke night with friends, and eating all-you-can-eat sushi. </p>
-                <img id="about_pics" src="" alt="Jose Andrade">
+                <img id="about_pics" src="jose.jpg" alt="Jose Andrade">
                 <h3 align="center">Jose Andrade</h3>
                 <p align="center"><u>Major</u>: Software Engineering<br/><u>Year</u>: 3rd<br/><u>Team Role</u>: Developer<br/><u>Hobbies</u>: I enjoy programming, playing games, and running when not in school. I hope you enjoy the website as much as the team has enjoyed building the website.</p>
                 <img id="about_pics" src="adam.jpg" alt="Adam Sloma">
