--- a/weightlifting_tangerine.html
+++ b/weightlifting_tangerine.html
@@ -79,39 +79,41 @@
       </div>
     </nav>
     <!-- BODY -->
-    <div id="main">
-      <br>
-      <h1 align="center">Weightlifting</h1><br>
-      <p>Tangerine Fit Weightlifting is designed for athletes to make the most out of their time in the gym.
-        Each exercise routine is constructed from the ground up to ensure that the user can build the maximum
-        amount of muscle and not spend hours in the gym.</p><br>
-      <h2 align="center">101 Series</h2><br>
-      <p>Our 101 series is designed for beginners in the weightroom to ensure that aspiring athletes are
-        able to build a solid foundation. At Tangerine Fit, we place an emphasis on control and form while
-        performing our exercises, and the 101 series allows althletes to get comfortable with exercises
-        while still building muscle.</p><br>
-      <h2 align="center">102 Series</h2><br>
-      <p>The 102 series is designed for intermediate athletes. These workouts are much more taxing on
-        the body and include advanced lifting techniques, such as dropsets and supersets. We recommend
-        that athletes perform our 101 series before attempting the 102 series to ensure that they are
-        comfortable with the Tangerine Fit Weightlifting style.</p><br>
-      <h2 align="center">103 Series</h2><br>
-      <p>The 103 series is designed with the advanced weightlifting athlete in mind. We recommend
-        athletes perform both our 101 and 102 series for an extended period of time before attempting
-        the 103 series. This series is tailored for athletes with a solid foundation and a substantial
-        amount of mass in the targeted muscle group.</p><br>
-      <h2 align="center">Tangerine Fit Training Regiment</h2><br>
-      <p>We recommend attempting the 101 series for up to 2 months to build a foundation. We then
-        suggest attempting the 102 series for up to 2 months once our athletes are accustomed to
-        the 101 series. Next, we believe that our athletes should transition back to the 101 series
-        to perform those routines for up to 2 more months with the strength they have built over the
-        last 4 months. Next, we have our athletes perform the 102 series once again for up to 2
-        more months. If our athletes feel comfortable after these 6 months of training, we urge them
-        to try the 103 series with lighter weight for up to 2 months before transitioning back to the
-        102 series with newly found strength and mass for up to 2 months. After that, we feel our
-        athletes will be able to handle the 103 series with heavier weight. This allows our athletes to
-        train and maximize muscle growth of the period of a year and get them accostomed to a variety
-        of exercises in the weightroom.</p>
+    <div class="container">
+      <div id="main">
+        <br>
+        <h1 align="center">Weightlifting</h1><br>
+        <p>Tangerine Fit Weightlifting is designed for athletes to make the most out of their time in the gym.
+          Each exercise routine is constructed from the ground up to ensure that the user can build the maximum
+          amount of muscle and not spend hours in the gym.</p><br>
+        <h2 align="center">101 Series</h2><br>
+        <p>Our 101 series is designed for beginners in the weightroom to ensure that aspiring athletes are
+          able to build a solid foundation. At Tangerine Fit, we place an emphasis on control and form while
+          performing our exercises, and the 101 series allows althletes to get comfortable with exercises
+          while still building muscle.</p><br>
+        <h2 align="center">102 Series</h2><br>
+        <p>The 102 series is designed for intermediate athletes. These workouts are much more taxing on
+          the body and include advanced lifting techniques, such as dropsets and supersets. We recommend
+          that athletes perform our 101 series before attempting the 102 series to ensure that they are
+          comfortable with the Tangerine Fit Weightlifting style.</p><br>
+        <h2 align="center">103 Series</h2><br>
+        <p>The 103 series is designed with the advanced weightlifting athlete in mind. We recommend
+          athletes perform both our 101 and 102 series for an extended period of time before attempting
+          the 103 series. This series is tailored for athletes with a solid foundation and a substantial
+          amount of mass in the targeted muscle group.</p><br>
+        <h2 align="center">Tangerine Fit Training Regiment</h2><br>
+        <p>We recommend attempting the 101 series for up to 2 months to build a foundation. We then
+          suggest attempting the 102 series for up to 2 months once our athletes are accustomed to
+          the 101 series. Next, we believe that our athletes should transition back to the 101 series
+          to perform those routines for up to 2 more months with the strength they have built over the
+          last 4 months. Next, we have our athletes perform the 102 series once again for up to 2
+          more months. If our athletes feel comfortable after these 6 months of training, we urge them
+          to try the 103 series with lighter weight for up to 2 months before transitioning back to the
+          102 series with newly found strength and mass for up to 2 months. After that, we feel our
+          athletes will be able to handle the 103 series with heavier weight. This allows our athletes to
+          train and maximize muscle growth of the period of a year and get them accostomed to a variety
+          of exercises in the weightroom.</p>
+      </div>
     </div>
 
 </html>
