Separated the Conditioning paragraph into two paragraphs.

--- a/cardio_tangerine.html
+++ b/cardio_tangerine.html
@@ -93,8 +93,8 @@
         <h2 align="center">Conditioning</h2><br>
         <p>Our Conditioning routines are designed in order to keep your heart rate elevated and lungs working,
           but will also allow our athletes to push themselves through periodic moments of fast movement.
-          This will ensure that our athletes never lose progress, but are always moving forward.<br>We recommend
-          attempting whichever routine fits your fitness goals. However, we also recommend occasionally
+          This will ensure that our athletes never lose progress, but are always moving forward.</p>
+        <p>We recommend attempting whichever routine fits your fitness goals. However, we also recommend occasionally
           mixing the other routine into your regiment. These workouts can be performed as a standalone workout,
           or after a weightlifting routine.</p>
         </div>
