--- a/chest_101.html
+++ b/chest_101.html
@@ -1,108 +1,186 @@
-<html>
-    <head>
-        <title>Tangerine Fit</title>
-        <link rel="stylesheet" type="text/css" href="css_tangerine.css"/>
-    </head>
-    <body>
-        <div id="container">
-            <div id="header">
-                <b id="name"><font size = "+5">TF</font></b>
-                <ul>
-                    <li><a class="" href="home_tangerine.html">Home</a></li>
-                    <li><a class="selected" href="weightlifting_tangerine.html">Weightlifting</a></li>
-                    <li><a class="" href="cardio_tangerine.html">Cardio</a></li>
-                    <li><a class="" href="hiit_tangerine.html">HIIT</a></li>
-                    <li><a class="" href="about_tangerine.html">About</a></li>
-                </ul>
-            </div>
-            <div>
-                <div id="nav">
-                    <h2 align="center" id="header_nav">Workout Routines</h2>
-                    <ul id="nav_ul">
-                        <h3><ah class="" href="">Chest</ah></h3>
-                        <li><a class="" href="chest_101.html">-  Chest 101</a></li>
-                        <li><a class="" href="chest_102.html">-  Chest 102</a></li>
-                        <li><a class="" href="chest_103.html">-  Chest 103</a></li>
-                        <h3><ah class="" href="">Back</ah></h3>
-                        <li><a class="" href="back_101.html">-  Back 101</a></li>
-                        <li><a class="" href="back_102.html">-  Back 102</a></li>
-                        <li><a class="" href="back_103.html">-  Back 103</a></li>
-                        <h3><ah class="" href="">Legs</ah></h3>
-                        <li><a class="" href="legs_101.html">-  Legs 101</a></li>
-                        <li><a class="" href="legs_102.html">-  Legs 102</a></li>
-                        <li><a class="" href="legs_103.html">-  Legs 103</a></li>
-                        <h3><ah class="" href="">Shoulders</ah></h3>
-                        <li><a class="" href="shoulders_101.html">-  Shoulders 101</a></li>
-                        <li><a class="" href="shoulders_102.html">-  Shoulders 102</a></li>
-                        <li><a class="" href="shoulders_103.html">-  Shoulders 103</a></li>
-                        <h3><ah class="" href="">Arms</ah></h3>
-                        <li><a class="" href="arms_101.html">-  Arms 101</a></li>
-                        <li><a class="" href="arms_102.html">-  Arms 102</a></li>
-                        <li><a class="" href="arms_103.html">-  Arms 103</a></li>
-                        <h3><ah class="" href="">Abdominals</ah></h3>
-                        <li><a class="" href="abs_101.html">-  Abdominals 101</a></li>
-                        <li><a class="" href="abs_102.html">-  Abdominals 102</a></li>
-                        <li><a class="" href="abs_103.html">-  Abdominals 103</a></li>
-                    </ul>
-                </div>
-                <div id="main_info">
-                    <div id="main_info_header">
-                        <h2 align="center">Chest 101</h2>
-                    </div>
-                    <div id="routine">
-                        <div id="picture">
-                            <img src="flat_bb_bench.jpg" alt="Flat Barbell Bench Press">
-                        </div>
-                        <div id="routine_exercise">
-                            <h4><exerciseHead>Flat Barbell Bench Press</exerciseHead></h4>
-                            <p><i>(4 sets | 15, 12, 12, 10-8)</i></p>
-                            <p><u>Info</u>: There will be 4 sets. The first three sets will be focused on high repetitions and good form. Increase the weight about 15-20% after the first set. For the last set, increase the weight another 15-20%. This will be a drop set where after completing the first 10 reps, you will drop the weight about 30-45% and complete 8 more reps.</p>
-                            <p><u>Form</u>: Grab the bar just outside of shoulder width. Draw your shoulder blades backward. Bring the bar in a straight down motion and touch the bar to your chest around your sternum. Keep arms at about a 45 degree angle from your sides in order to keep pressure off your shoulders.</p>
-                        </div>
-                        <div id="picture">
-                            <img src="incline_bb_bench.jpeg" alt="Incline Barbell Bench Press">
-                        </div>
-                        <div id="routine_exercise">
-                            <h4><exerciseHead>Incline Barbell Bench Press</exerciseHead></h4>
-                            <p><i>(4 sets | 15, 12, 12, 10-8)</i></p>
-                            <p><u>Info</u>: There will be 4 sets. The first three sets will be focused on high repetitions and good form. The last set will be a drop set where after completing the first 10 reps, you will drop the weight about 30% and complete 8 more reps.</p>
-                            <p><u>Form</u>: Grab the bar just outside of shoulder width. Draw your shoulder blades backward. Bring the bar in a straight down motion and touch the bar to your chest around the upper part of your chest. Keep arms at about a 45 degree angle from your sides in order to keep pressure off your shoulders.</p>
-                        </div>
-                        <div id="picture">
-                            <img src="incline_db_bench.jpeg" alt="Incline Barbell Bench Press">
-                        </div>
-                        <div id="routine_exercise">
-                            <h4><exerciseHead>Incline Dumbbell Bench Press</exerciseHead></h4>
-                            <p><i>(4 sets | 15, 15, 12, 12)</i></p>
-                            <p><u>Info</u>: There will be 4 sets. All 4 will be focused on high repetitions with an emphasis on good form. Increase the weight after the second set about 10-15%.</p>
-                            <p><u>Form</u>: Grab the dumbells and hold them above you touching. Draw your shoulder blades backward. Bring the bar in a straight down motion and bend your elbows just past 90 degrees. Keep arms at about a 45 degree angle from your sides in order to keep pressure off your shoulders.</p>
-                        </div>
-                        <div id="picture">
-                            <img src="dips.jpeg" alt="Dips">
-                        </div>
-                        <div id="routine_exercise">
-                            <h4><exerciseHead>Bodyweight Dips</exerciseHead></h4>
-                            <p><i>(2 sets | AMRAP)</i></p>
-                            <p><u>Info</u>: There will be 2 sets. Both will be focused on burning out your muscles and performing as many reps as possible with good form.</p>
-                            <p><u>Form</u>: Grab the bars and hold yourself straight up. Lean forward slightly and lower yourself so that your arms bend to about 90 degrees.</p>
-                        </div>
-                        <div id="picture">
-                            <img src="pushups.jpeg" alt="Pushups">
-                        </div>
-                        <div id="routine_exercise">
-                            <h4><exerciseHead>Push-Ups</exerciseHead></h4>
-                            <p><i>(1 set | AMRAP)</i></p>
-                            <p><u>Info</u>: There will be 1 set. It will focus on taking your chest to complete exhaustion. Perform as many reps as possible. If you don’t have enough energy to perform standard push-ups, do push-ups on your knees.</p>
-                            <p><u>Form</u>: Put your arms just outside shoulder width and keep a straight back. Lower yourself to the ground and push yourself back up.</p>
-                        </div>
-                    </div>
-                    
-                </div>
-            </div>
+<!doctype html>
+<html lang="en">
 
-            <div id = "footer">
-                Copyright &copy; 2019 Tangerine Fit.
+    <head>
+      <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewpoint" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+      <title>Tagnerine Fit</title>
+      <!-- BOOTSTRAP -->
+      <link href="css/bootstrap.min.css" rel="stylesheet">
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.6/umd/popper.min.js"></script>
+      <script src="js/bootstrap.min.js"></script>
+    </head>
+
+    <!-- NAVIGATION BAR -->
+    <nav class="navbar navbar-expand-lg fixed-top navbar-light" style="background-color: #fd7e14;">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <a class="navbar-brand text-light" href="home_tangerine.html">Tangerine Fit</a>
+      <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+        <ul class="navbar-nav">
+          <!-- HOME BUTTON -->
+          <li class="nav-item">
+            <a class="btn btn-light" role="button" href="home_tangerine.html">Home</a>
+          </li>
+          <!-- WEIGHTLIFTING DROPDOWN BUTTON -->
+          <li class="nav-item dropdown">
+            <div class="btn-group">
+              <a class="btn btn-light" href="weightlifting_tangerine.html" role="button">Weightlifting</a>
+              <button type="button" class="btn btn-light dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <span class="sr-only">Toggle Dropdown</span>
+              </button>
+            <div class="dropdown-menu">
+                <a class="dropdown-item" href="chest_101.html">Chest</a>
+                <a class="dropdown-item" href="back_101.html">Back</a>
+                <a class="dropdown-item" href="legs_101.html">Legs</a>
+                <a class="dropdown-item" href="shoulderes_101.html">Shoulders</a>
+                <a class="dropdown-item" href="arms_101.html">Arms</a>
+                <a class="dropdown-item" href="abs_101.html">Abdominals</a>
+              </div>
             </div>
+          </li>
+          <!-- CARDIO DROPDOWN BUTTON -->
+          <li class="nav-item dropdown">
+            <div class="btn-group">
+              <a class="btn btn-light" href="cardio_tangerine.html" role="button">Cardio</a>
+              <button type="button" class="btn btn-light dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <span class="sr-only">Toggle Dropdown</span>
+              </button>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="treadmill.html">Treadmill</a>
+                <a class="dropdown-item" href="exercise_bike.html">Exercise Bike</a>
+                <a class="dropdown-item" href="ellipptical.html">Elliptical</a>
+                <a class="dropdown-item" href="rowing.html">Rowing Machine</a>
+                <a class="dropdown-item" href="stairmaster.html">StairMaster</a>
+              </div>
+            </div>
+          </li>
+          <!-- HIIT DROPDOWN BUTTON -->
+          <li class="nav-item dropdown">
+            <div class="btn-group">
+              <a class="btn btn-light" href="hiit_tangerine.html" role="button">HIIT</a>
+              <button type="button" class="btn btn-light dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <span class="sr-only">Toggle Dropdown</span>
+              </button>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="hiit_strength_101.html">Strength</a>
+                <a class="dropdown-item" href="hiit_fl_101.html">Fat Loss</a>
+              </div>
+            </div>
+          </li>
+          <!-- ABOUT BUTTON -->
+          <li class="nav-item">
+            <a class="btn btn-light" role="button" href="about_tangerine.html">About</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <!--  GRID BUTTONS -->
+    <div class="container">
+      <br><br><br>
+      <div class="row">
+        <div class="col-md-4">
+          <a class="btn btn-light btn-outline-primary btn-lg btn-block disabled" href="chest_101.html" role="button">Chest 101</a>
         </div>
-    </body>
+        <div class="col-md-4">
+          <a class="btn btn-light btn-outline-primary btn-lg btn-block" href="chest_102.html" role="button">Chest 102</a>
+        </div>
+        <div class="col-md-4">
+          <a class="btn btn-light btn-outline-primary btn-lg btn-block" href="chest_103.html" role="button">Chest 103</a>
+        </div>
+      </div>
+    </div><br><br>
+    <!-- BODY -->
+    <div class="container">
+      <div class="row justify-content-md-center">
+        <div class="col-md-10">
+          <div class="card border-light mb-3">
+            <div class="card-header text-center h5">Flat Barbell Bench Press</div>
+            <div class="card-body text-center">
+              <img src="flat_bb_bench.jpg" class="img-fluid" alt="Responsive image">
+              <p><i>(4 sets | 15, 12, 12, 10-8)</i></p>
+              <p><u>Info</u>: There will be 4 sets. The first three sets will be focused on high repetitions and good form.
+                Increase the weight about 15-20% after the first set. For the last set, increase the weight another 15-20%.
+                This will be a drop set where after completing the first 10 reps, you will drop the weight about 30-45% and
+                complete 8 more reps.</p>
+              <p><u>Form</u>: Grab the bar just outside of shoulder width. Draw your shoulder blades backward. Bring the
+                bar in a straight down motion and touch the bar to your chest around your sternum. Keep arms at about a 45
+                degree angle from your sides in order to keep pressure off your shoulders.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row justify-content-md-center">
+        <div class="col-md-10">
+          <div class="card border-light mb-3">
+            <div class="card-header text-center h5">Incline Barbell Bench Press</div>
+            <div class="card-body text-center">
+              <img src="incline_bb_bench.jpeg" class="img-fluid" alt="Responsive image">
+              <p><i>(4 sets | 15, 12, 12, 10-8)</i></p>
+              <p><u>Info</u>: There will be 4 sets. The first three sets will be focused on high repetitions and good
+                form. The last set will be a drop set where after completing the first 10 reps, you will drop the
+                weight about 30% and complete 8 more reps.</p>
+              <p><u>Form</u>: Grab the bar just outside of shoulder width. Draw your shoulder blades backward.
+                Bring the bar in a straight down motion and touch the bar to your chest around the upper part of your
+                chest. Keep arms at about a 45 degree angle from your sides in order to keep pressure off your shoulders.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row justify-content-md-center">
+        <div class="col-md-10">
+          <div class="card border-light mb-3">
+            <div class="card-header text-center h5">Incline Dumbbell Bench Press</div>
+            <div class="card-body text-center">
+              <img src="incline_db_bench.jpeg" class="img-fluid" alt="Responsive image">
+              <p><i>(4 sets | 15, 15, 12, 12)</i></p>
+              <p><u>Info</u>: There will be 4 sets. All 4 will be focused on high repetitions with an emphasis on good form.
+                Increase the weight after the second set about 10-15%.</p>
+              <p><u>Form</u>: Grab the dumbells and hold them above you touching. Draw your shoulder blades backward. Bring
+                the bar in a straight down motion and bend your elbows just past 90 degrees. Keep arms at about a 45 degree
+                angle from your sides in order to keep pressure off your shoulders.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row justify-content-md-center">
+        <div class="col-md-10">
+          <div class="card border-light mb-3">
+            <div class="card-header text-center h5">Bodyweight Dips</div>
+            <div class="card-body text-center">
+              <img src="dips.jpeg" class="img-fluid" alt="Responsive image">
+              <p><i>(2 sets | AMRAP)</i></p>
+              <p><u>Info</u>: There will be 2 sets. Both will be focused on burning out your muscles and performing as
+                many reps as possible with good form.</p>
+              <p><u>Form</u>: Grab the bars and hold yourself straight up. Lean forward slightly and lower yourself so
+                that your arms bend to about 90 degrees.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row justify-content-md-center">
+        <div class="col-md-10">
+          <div class="card border-light mb-3">
+            <div class="card-header text-center h5">Push-Ups</div>
+            <div class="card-body text-center">
+              <img src="pushups.jpeg" class="img-fluid" alt="Responsive image">
+              <p><i>(1 set | AMRAP)</i></p>
+              <p><u>Info</u>: There will be 1 set. It will focus on taking your chest to complete exhaustion. Perform
+                as many reps as possible. If you don’t have enough energy to perform standard push-ups, do push-ups on
+                your knees.</p>
+              <p><u>Form</u>: Put your arms just outside shoulder width and keep a straight back. Lower yourself to
+                the ground and push yourself back up.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
 </html>
